--- a/style.css
+++ b/style.css
@@ -362,7 +362,7 @@ a:hover{
 .hands{
     height: 120vh;
     width: 100%;
-    background-image: url(https://firebasestorage.googleapis.com/v0/b/chuck-842bb.appspot.com/o/GurAmanWed%2Fpic6.jpg?alt=media&token=febecde7-9479-4a1e-8402-28f021228422);
+    background-image: url(https://share.cusat.me/static/uploads/86020230506_001624.jpg);
     background-size: cover;
     background-position-y: center;
     background-attachment: fixed;
@@ -418,7 +418,7 @@ a:hover{
     display: block;
     height: 100vh;
     width: 40vw;
-    background-image: url(https://firebasestorage.googleapis.com/v0/b/chuck-842bb.appspot.com/o/GurAmanWed%2Fpic7.jpg?alt=media&token=79b8d974-04ff-4b2d-bed5-82638399b34e);
+    background-image: url(https://share.cusat.me/static/uploads/86020230506_001624.jpg);
     background-size: cover;
     background-position-y: top;
     background-repeat: no-repeat;
@@ -428,7 +428,7 @@ a:hover{
     display: none;
 }
 .registry-img-lg{
-    display: block;
+    display: blold;
 }
 @media (max-width:1000px){
     #registry{
